--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-title = "Varlociraptor Homepage"
+title = "Varlociraptor Scenario Catalog"
 description = "Flexible, arbitrary-scenario, uncertainty-aware variant calling with parameter free filtration via FDR control."
 
 # The URL the site will be built for
