--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         uses: snakemake/snakemake-github-action@v1.17.0
         with:
           directory: 'content/scenarios/workflow'
-          snakefile: 'Snakefile'
+          snakefile: 'content/scenarios/workflow/Snakefile'
           args: '--cores 1 --use-conda'
       # Build & deploy
       - name: Deploy
