--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: shalzz/zola-deploy-action
+    name: Build and deploy GH pages
     runs-on: ubuntu-latest
     steps:
       # Checkout
