--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Checkout
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       # Render scenario pages
       - name: Render scenarios
         uses: snakemake/snakemake-github-action@v1.17.0
