--- a/scenarios/tumor-normal-relapse-prior/tumor-normal-relapse.scenario.yaml
+++ b/scenarios/tumor-normal-relapse-prior/tumor-normal-relapse.scenario.yaml
@@ -18,15 +18,21 @@ samples:
     inheritance:
       clonal:
         from: normal
+        somatic: false
+    contamination:
+      by: normal
+      fraction: 0.15
+  relapse:
+    universe: "[0.0,1.0]"
     contamination:
       by: normal
       fraction: 0.1
   normal:
-    sex: female
     somatic-effective-mutation-rate: 1e-10
+    sex: male
 
 events:
-  somatic_tumor_high: "normal:0.0 & tumor:[0.1,1.0]"
-  somatic_tumor_low: "normal:0.0 & tumor:]0.0,0.1["
-  somatic_normal: "normal:]0.0,0.5["
+  somatic_tumor: "normal:0.0 & tumor:]0.0,1.0]"
+  somatic_relapse: "normal:0.0 & tumor:0.0 & relapse:]0.0,1.0]"
   germline: "normal:0.5 | normal:1.0"
+  somatic_normal: "normal:]0.0,0.5[ | normal:]0.5,1.0["
