--- a/scenarios/tumor-relapse-prior/tumor-relapse.scenario.yaml
+++ b/scenarios/tumor-relapse-prior/tumor-relapse.scenario.yaml
@@ -13,20 +13,23 @@ species:
   genome-size: 3.5e9
 
 samples:
+  normal:
+    sex: male
   tumor:
     somatic-effective-mutation-rate: 1e-6
     inheritance:
       clonal:
         from: normal
+        somatic: false
     contamination:
       by: normal
       fraction: 0.1
-  normal:
-    sex: female
-    somatic-effective-mutation-rate: 1e-10
+  relapse:
+    universe: "[0.0,1.0]"
+    contamination:
+      by: normal
+      fraction: 0.2
 
 events:
-  somatic_tumor_high: "normal:0.0 & tumor:[0.1,1.0]"
-  somatic_tumor_low: "normal:0.0 & tumor:]0.0,0.1["
-  somatic_normal: "normal:]0.0,0.5["
-  germline: "normal:0.5 | normal:1.0"
+  somatic_tumor: "tumor:]0.0,1.0]"
+  somatic_relapse: "tumor:0.0 & relapse:]0.0,1.0]"
