--- a/scenarios/tumor-normal-prior/scenario.yaml
+++ b/scenarios/tumor-normal-prior/scenario.yaml
@@ -14,7 +14,7 @@ species:
 
 samples:
   tumor:
-    sex: male
+    sex: female
     somatic-effective-mutation-rate: 1e-6
     inheritance:
       clonal:
