ffpe substitution expression

--- a/scenarios/ffpe-artifact-handling/scenario.yaml
+++ b/scenarios/ffpe-artifact-handling/scenario.yaml
@@ -3,6 +3,9 @@ samples:
     universe: "[0.0,1.0]"
     resolution: 100
 
+expressions:
+  ffpe_subst: "(C>T | G>A)"
+
 events:
-  ffpe_artifact: "(C>T | G>A) & ffpetumor:]0.0,0.05["
-  present: "((C>T | G>A) & ffpetumor:]0.05,1.0]) | (!(C>T | G>A) & ffpetumor:]0.0,1.0[)"
+  ffpe_artifact: "$ffpe_subst & ffpetumor:]0.0,0.05["
+  present: "($ffpe_subst & ffpetumor:]0.05,1.0]) | (!$ffpe_subst & ffpetumor:]0.0,1.0[)"
