--- a/scenarios/pedigree-prior/scenario.yaml
+++ b/scenarios/pedigree-prior/scenario.yaml
@@ -34,4 +34,4 @@ samples:
 events:
   denovo_child: "(child:0.5 | child:1.0) & mother:0.0 & father:0.0"
   denovo_sibling: "(sibling:0.5 | sibling:1.0) & mother:0.0 & father:0.0"
-  inherited: "!mother:0.0 | !father:0.0"
+  other: "!($denovo_child | $denovo_sibling | $absent)"
