--- a/scenarios/simple-pedigree-prior/meta.yaml
+++ b/scenarios/simple-pedigree-prior/meta.yaml
@@ -3,6 +3,6 @@ desc: |
   This scenario configures Varlociraptor to perform a simple trio pedigree calling. The model is configured with prior assumptions about mutation rate and heterozygosity.
 plot-prior:
   samples:
-    - tumor
+    - child
   contigs:
     - 1
