fix: always check scenarios, fixes in various scenarios

--- a/scenarios/tumor-normal-relapse-prior/scenario.yaml
+++ b/scenarios/tumor-normal-relapse-prior/scenario.yaml
@@ -26,7 +26,8 @@ samples:
     sex: male
     somatic-effective-mutation-rate: 1e-6
     inheritance:
-      subclonal: tumor
+      subclonal:
+        from: tumor
     contamination:
       by: normal
       fraction: 0.1
