--- a/scenarios/ffpe-artifact-handling/scenario.yaml
+++ b/scenarios/ffpe-artifact-handling/scenario.yaml
@@ -4,8 +4,8 @@ samples:
     resolution: 0.01
 
 expressions:
-  ffpe_subst: "(C>T | G>A)"
+  ffpe_subst: "C>T | G>A"
 
 events:
-  ffpe_artifact: "$ffpe_subst & ffpetumor:]0.0,0.05["
-  present: "($ffpe_subst & ffpetumor:]0.05,1.0]) | (!$ffpe_subst & ffpetumor:]0.0,1.0[)"
+  ffpe_artifact: "($ffpe_subst) & ffpetumor:]0.0,0.05["
+  present: "(($ffpe_subst) & ffpetumor:]0.05,1.0]) | (!($ffpe_subst) & ffpetumor:]0.0,1.0[)"
