--- a/scenarios/tumor-only-prior/scenario.yaml
+++ b/scenarios/tumor-only-prior/scenario.yaml
@@ -19,7 +19,7 @@ samples:
     inheritance:
       clonal:
         from: normal
-        somatic: false
+        somatic: true
     contamination:
       by: normal
       fraction: 0.1
