--- a/scenarios/tumor-relapse-prior/scenario.yaml
+++ b/scenarios/tumor-relapse-prior/scenario.yaml
@@ -21,7 +21,7 @@ samples:
     inheritance:
       clonal:
         from: normal
-        somatic: false
+        somatic: true
     contamination:
       by: normal
       fraction: 0.1
