--- a/scenarios/population-prior/meta.yaml
+++ b/scenarios/population-prior/meta.yaml
@@ -1,10 +1,13 @@
 name: Population calling with priors
 desc: |
-  This scenario configures Varlociraptor to perform population calling. The model is configured with prior assumptions about mutation rate and heterozygosity.
+  This scenario configures Varlociraptor to perform population calling. 
+  The model is configured with prior assumptions about mutation rate and heterozygosity.
+  Note that you should configure these with your own expetise or via literature research. 
+  The values shown here are only examples.
+
   Note that future versions of Varlociraptor will additionaly support quantors "any" and "all", which will make population calling more efficient and convenient.
 plot-prior:
   samples:
     - a
   contigs:
     - 1
-
