--- a/scenarios/tumor-normal-relapse-prior/meta.yaml
+++ b/scenarios/tumor-normal-relapse-prior/meta.yaml
@@ -1,6 +1,9 @@
 name: Tumor/normal/relapse calling with priors
 desc: |
-  This scenario configures Varlociraptor to perform tumor/normal/relapse calling. The model is configured with prior assumptions about mutation rate and heterozygosity.
+  This scenario configures Varlociraptor to perform tumor/normal/relapse calling. 
+  The model is configured with prior assumptions about mutation rate and heterozygosity. 
+  Note that you should configure these with your own expetise or via literature research. 
+  The values shown here are only examples.
 plot-prior:
   samples:
     - relapse
